# hex-viewer

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  check_output.txt
.github/workflows/: windows-build.yml
docs/: structure-definition-spec.md
src/: actions.rs  app.rs  app_actions.rs  app_state.rs  app_title_bar.rs  appearance.rs  editor_panel.rs  file_tree_panel.rs  keybindings.rs  main.rs  panels.rs  settings_panel.rs  theme.rs  workspace.rs
src/analysis/: diff.rs  mod.rs  search.rs
src/app/: actions.rs  mod.rs  workspace.rs
src/core/: appearance.rs  buffer.rs  checksum.rs  command.rs  document.rs  editor.rs  encoding.rs  history.rs  layout.rs  mod.rs  search.rs
src/core/structure/: definition.rs  expression.rs  interpreter.rs  kaitai.rs  mod.rs  palette.rs  parser.rs  stream.rs  tests.rs  types.rs
src/data/: editor.rs  encoding.rs  file_buffer.rs  mod.rs  search.rs
src/model/: diff.rs  editor.rs  file_buffer.rs  mod.rs  search.rs
src/service/: editor_service.rs  mod.rs  open_file_manager.rs
src/ui/: constants.rs  diff_panel.rs  editor_panel.rs  file_tree_panel.rs  mod.rs  pane.rs  settings_panel.rs  status_bar.rs  style.rs  toolbar.rs  window.rs  workspace.rs
src/ui/component/: hex_view.rs  mod.rs  search_bar.rs
src/ui/components/: activity_bar.rs  checksum_panel.rs  data_inspector.rs  file_tree_panel.rs  file_tree_view.rs  hex_view.rs  mod.rs  search_bar.rs  status_bar.rs  struct_tree_view.rs  title_bar.rs
src/ui/panels/: diff_panel.rs  editor_panel.rs  file_tree_panel.rs  left_panel.rs  (+4 more)
src/util/: constants.rs
themes/: ayu.json
