[package]
name = "xvi"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["full"] }
gpui_util = "0.2"
autocorrect = "2.14.2"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.1"
serde_json = "1.0.149"
toml = "0.8"
bstr = "1.9"
rfd = "0.17.2"

