[package]
name = "xvw"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1.0.104"
tokio = { version = "1.53.0", features = ["full"] }
gpui_util = "0.2"
autocorrect = "2.14.2"
serde = { version = "1.0.229", features = ["derive"] }
schemars = "1.2.1"
serde_json = "1.0.150"
toml = "1.1.3+spec-1.1.0"
bstr = "1.13.0"
rfd = "0.17.2"
serde_yaml = "0.9"
memmap2 = "0.9.11"
flate2 = "1.1.9"
image = "0.25.10"
sha2 = "0.11.0"


